[package]
name = "e1_20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simplelog = "0.10.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "rdm_test"
path = "src/bin.rs" # replace bin.rs with name of your file
